[build-system]
requires = ["poetry~=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
authors = ["Carsten Rösnick-Neugebauer <croesnick@gmail.com>"]
name = "keithley_daq6510"
version = "0.0.1"
description = "Sample library for Keithley DAQ6510 instrument utilizing pyvisa and pyvisa-sim"
license = "MIT"
readme = "README.rst"
repository = "https://github.com/croesnick/keithley_daq6510"
documentation = "https://keithley-daq6510.readthedocs.org"
keywords = ["keithley_daq6510"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Typing :: Typed",
]
packages = [
    { include = "keithley_daq6510", from = "src" },
]
include = [
    "LICENSE",
    "setup.cfg",
    "*.rst",
    "*.toml",
    "*.ini",
    "*.yml",
]

[tool.poetry.dependencies]
python = ">=3.5.2,<4"

[tool.poetry.dev-dependencies]
pip = "^19.2.3"
bump2version = "^0.5.11"
tox = "^3.14.0"
twine = "^1.14.0"
coverage = "4.5.4"
pytest = "^5.3.2"
flake8 = "^3.7.9"
mypy = "0.750"
Sphinx = "^2.3.0"
sphinx-autodoc-typehints = "^1.10.3"
