[build-system]
requires = ["poetry~=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "keithley_daq6510"
version = "0.0.1"
description = "Sample library for Keithley DAQ6510 instrument utilizing pyvisa and pyvisa-sim"

license = "MIT"

authors = ["Carsten Rösnick-Neugebauer <croesnick@gmail.com>"]

readme = "README.rst"
documentation = "https://keithley-daq6510.readthedocs.org"
repository = "https://github.com/croesnick/keithley_daq6510"

keywords = ["keithley_daq6510"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Typing :: Typed",
]

packages = [
    { include = "keithley_daq6510", from = "src" },
]
include = [
    "LICENSE",
    "setup.cfg",
    "*.rst",
    "*.toml",
    "*.ini",
    "*.yml",
]

[tool.poetry.dependencies]
python = "^3.6"
pyvisa = "^1.10.1"

# NOTE
# Optional (dev-)dependencies are listed on purpose within the common deps   section.
# See https://github.com/python-poetry/poetry/pull/606#issuecomment-437943927 and
#     https://github.com/python-poetry/poetry/issues/1145.
coverage = { version = "^4.5.4", optional = true }
flake8 = { version = "~3.7.9", optional = true }
importlib_resources = { version = "~1.0.1", optional = true }
mypy = { version = "0.750", optional = true }
pytest = { version = "~5.3.2", optional = true }

Sphinx = { version = "~2.3.0", optional = true }
sphinx-autodoc-typehints = { version = "~1.10.3", optional = true }
sphinx_rtd_theme = { version = "~0.4.3", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-autodoc-typehints", "sphinx_rtd_theme"]
tests = ["coverage", "importlib_resources", "flake8", "mypy", "pytest"]

[tool.poetry.dev-dependencies]
pip = "~19.2.3"
bump2version = "~0.5.11"
pyvisa-sim = { git = "https://github.com/croesnick/pyvisa-sim.git", branch = "devel" }
tox = "~3.14.0"
